<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200sp"
        android:layout_height="200sp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/download_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circle_icons_download" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/glideButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onGlideSelected"
            android:text="@string/radio_button_1_text" />

        <!--        android:onClick="@{(selection)->loadingViewModel.onGlideSelected(selection)}"-->

        <RadioButton
            android:id="@+id/loadAppButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onLoadAppSelected"
            android:text="@string/radio_button_2_text" />

  <!--      android:onClick="@{loadingViewModel.onLoadAppSelected}"-->

        <RadioButton
            android:id="@+id/retrofitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRetrofitSelected"
            android:text="@string/radio_button_3_text" />
    </RadioGroup>

    <com.udacity.LoadingButton
        android:id="@+id/custom_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        app:notLoadingColor="@color/teal_200"
        app:loadingColor="@color/purple_200"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>